--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -91,6 +91,8 @@ on early-boot
     write /sys/bus/msm_subsys/devices/subsys7/restart_level "related"
     write /sys/bus/msm_subsys/devices/subsys8/restart_level "related"
 
+    exec u:r:vendor_qti_init_shell:s0 -- /vendor/bin/init.qcom.early_boot.sh
+
 on boot
     chown bluetooth net_bt /sys/class/rfkill/rfkill0/state
     chown bluetooth net_bt /sys/class/rfkill/rfkill0/type
